[tool.poetry]
name = "python-dynamodb"
version = "0.1.0"
description = ""
authors = ["Luis E Moreno <lemiliomoreno@gmail.com>"]
readme = "README.md"
packages = [{include = "python_dynamodb"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.156"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
